--- a/css/SingleDatePicker.scss
+++ b/css/SingleDatePicker.scss
@@ -12,14 +12,6 @@
   top: $react-dates-spacing-vertical-picker;
 }
 
-.SingleDatePicker__picker--show {
-  visibility: visible;
-}
-
-.SingleDatePicker__picker--invisible {
-  visibility: hidden;
-}
-
 .SingleDatePicker__picker--direction-left {
   left: 0;
 }
